Able to receive address from form

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     DownBad Demo
     <br >
     <form action="/joinDownBad" method="post">
-      <input type="text" id="address" value="0x0">
-      <button>Join DownBad</button>
+      <input type="text" name="address" id="address" value="0x0">
+      <input type="submit" value="Join DownBad">Join DownBad</input>
     </form>
     <button onclick="leaveDownBad();">Leave DownBad</button>
     <br /><br />
