--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     const DownBadAddress = '0xc38925b4688ff0101A40317c8d64ADD74723aa7e';
 
     // Fetching the contract ABI json that is sent with the HTML file
-    fetch("/public/DownBad.json").then(response => {
+    fetch("DownBad.json").then(response => {
 
         return response.json();
 
