--- a/index.html
+++ b/index.html
@@ -150,7 +150,18 @@
         </div>
         <div>
           <h2>Instructions</h2>
-          Add description and instructions later
+          # Welcome to the DownBad wiki!
+
+          ### DownBad is a proof of concept for the worlds first fully decentralized autonomous charitable organization currently running on the Ropsten test network. 
+
+          #### Please make sure to not send any interactions from the Ethereum main net. All transactions and funds from the main net will be lost.
+                  
+          Currently live on: https://downbad-interface.herokuapp.com/
+          The app will soon be live on: Downbad.cloud
+                  
+          We plan to migrate this project to other blockchains, to get around the ETH gas fee prices problem.
+          If you want to contribute in any way or help fund the development of this project feel free to contact me on Twitter @cloudmaking
+
         </div>
         <div class="row">
           <div class="col">
