Changed the name from DownBad to Charity-Dapp in the interface

--- a/index.html
+++ b/index.html
@@ -152,24 +152,21 @@
           <div class="col">
           </div>
           <div class="col-6">
-            <h1 class="mx-auto" style="width: 200px; display: block;"> Down Bad </h1>
+            <h1 class="mx-auto" style="width: 300px; display: block;">Charity-Dapp</h1>
           </div>
           <div class="col">
           </div>
         </div>
         <div>
-          <h2>Instructions</h2>
-          # Welcome to the DownBad wiki!
+          <h2>Welcome to the Charity-Dapp!</h2>
 
-          ### DownBad is a proof of concept for the worlds first fully decentralized autonomous charitable organization currently running on the Ropsten test network. 
-
-          #### Please make sure to not send any interactions from the Ethereum main net. All transactions and funds from the main net will be lost.
-                  
-          Currently live on: https://downbad-interface.herokuapp.com/
-          The app will soon be live on: Downbad.cloud
-                  
-          We plan to migrate this project to other blockchains, to get around the ETH gas fee prices problem.
-          If you want to contribute in any way or help fund the development of this project feel free to contact me on Twitter @cloudmaking
+          <span>The Charity-Dapp is a proof of concept for the worlds first fully decentralized autonomous charitable organization currently running on the Ropsten test network.</span>
+          <br>
+          <b>Please make sure to not send any interactions from the Ethereum main net. All transactions and funds from the main net will be lost.</b>
+          <br>
+          <span>We plan to migrate this project to other blockchains, to get around the ETH gas fee prices problem.</span>
+          <br>
+          <span>If you want to contribute in any way or help fund the development of this project feel free to contact me on Twitter @cloudmaking</span>
 
         </div>
         <div class="row">
@@ -177,10 +174,10 @@
             <button type="button" class="btn btn-primary" id='enableEthereumButton' onclick="enableEthereum();">Enable Ethereum</buton>
           </div>
           <div class="col-6">
-            <button type="button" class="btn btn-primary mx-auto" style="width: 150px; display: block;"id="joinDownBad">Join Down Bad</button>
+            <button type="button" class="btn btn-primary mx-auto" style="width: 150px; display: block;"id="joinDownBad">Join Charity</button>
           </div>
           <div class="col">
-            <button type="button" class="btn btn-primary" id="leaveDownBad">Leave Down Bad</button>
+            <button type="button" class="btn btn-primary" id="leaveDownBad">Leave Charity</button>
           </div>
         </div>
         <div class="row">
@@ -194,7 +191,7 @@
             </div>
             <div>
               <ol id="downBadList">
-                The Down Bad List is loading...
+                The Charity List is loading...
               </ol>
             </div>
           </div>
