--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>DownBad Contract</title>
+    <title>Charity-Dapp</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 
     <!-- Importing AJAX -->
